--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -8,17 +8,9 @@
 </head>
 <body>
     <%-include('../inc/nav.ejs')%>
-
     <section>
-        <h1>Yazılar</h1>
-        <ul>
-            <% blogs.forEach(blog=> {%>
-                <li>
-                    <a href="/blog/<%=blog._id%>"><%=blog.title%></a>
-                    <p><%=blog.short%></p>
-                </li>
-            <%})%> 
-        </ul>
-    </section>
+        <h1><%=blog.title%></h1> 
+        <p><%=blog.long%></p>
+    </section>   
 </body>
 </html>
